# GitAnalyser

./: Cargo.toml  GitAnalyser.1  install.sh
.github/workflows/: release.yml
src/: index.html  main.rs  metrics.rs
